# thermostat

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
